Fixes [#137658223] Hamburger menu too close to doc name for touch Increase padding-right for the menu and decrease padding-left for the file menu (from Bill Finzer, who originally made the change locally within CODAP)

--- a/src/style/components/dropdown-menu.styl
+++ b/src/style/components/dropdown-menu.styl
@@ -4,6 +4,7 @@
   .menu-anchor
     display inline-block
     cursor pointer
+    padding-right 10px
     svg
       fill #fff
 
