--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -16,7 +16,7 @@
   .menu-bar-content-filename
     label-font(size: 13px, transform: none)
     display inline-block
-    padding-left 10px
+    padding-left 5px
     padding-top 1px
     cursor pointer
     no-select()
